# AutoLifter

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/basic/: bitset.cpp  bitset.h  config.cpp  config.h  data.h  enumerator.cpp  enumerator.h  grammar.cpp  grammar.h  program.cpp  program.h  recorder.cpp  recorder.h  semantics.cpp  semantics.h  semantics_factory.cpp  semantics_factory.h  util.cpp  util.h
cpp/exp/: benchmark.cpp  benchmark.h  benchmark.json  divide_and_conquer.cpp  lazy_propagation.cpp  longest_segment.cpp
cpp/polygen/: polygen.cpp  polygen.h  term_solver.cpp  term_solver.h  unifier.cpp  unifier.h
cpp/solver/: brute_force_complete_solver.cpp  brute_force_complete_solver.h  complete_solver.cpp  complete_solver.h  enumerate_based_solver.cpp  enumerate_based_solver.h  example_space.cpp  example_space.h  external_solver.cpp  external_solver.h  hfta_solver.cpp  hfta_solver.h  solver.cpp  task.cpp
exp/oup/AutoLifter/d/: 0*1*  0after1  2nd-min  3rd-min  atoi  average  balanced  cnt_1s  count1(0*)2  count1(0+)  count1*2*3*  dropwhile  is_sorted  largest_peak  length  line_sight  lis  longest(00)*  longest1(0*)2  longest1*  longest_odd(10)*  max  max_1s_p  max_dist_between_zeros  max_len_1s  max_sum_between_ones  min  mpp  mps  mps_p  msp  mss  mtp  mts  mts_p  sum
exp/oup/Enum/d/: atoi  length  line_sight  max  min  sum
exp/oup/Relish/d/: 0*1*  0after1  2nd-min  atoi  average  cnt_1s  count1(0+)  dropwhile  is_sorted  length  line_sight  longest(00)*  (+9 more)
exp/result_cache/: AutoLifter.json  Enum.json  Parsynt17.json  Parsynt21.json  Relish.json
(+42 files in other folders)
